buildscript {
    repositories {
        maven {
            url = "https://maven.minecraftforge.net/"
        }
        maven {
            url = "https://libraries.minecraft.net/"
        }
        maven {
            url = "https://plugins.gradle.org/m2/"
        }
        maven {
            url = "https://repo.spongepowered.org/maven/"
        }
        maven {
            url = "https://maven.parchmentmc.org/"
        }
        jcenter()
        mavenCentral()
    }
    dependencies {
        classpath group: "net.minecraftforge.gradle", name: "ForgeGradle", version: "5.1.+", changing: true
        classpath "org.parchmentmc:librarian:1.+"
    }
}

apply plugin: "net.minecraftforge.gradle"
apply plugin: "eclipse"
apply plugin: "maven-publish"
apply plugin: "org.parchmentmc.librarian.forgegradle"

repositories {
    jcenter()
    flatDir {
        dirs "libs"
    }
    maven {
        url = "https://repo.spongepowered.org/maven/"
    }
    maven {
        url = "https://dvs1.progwml6.com/files/maven/"
    }
    maven {
        url = "https://maven.tterrag.com/"
    }
    maven {
        url = "https://maven.blamejared.com/"
    }
    maven {
        url = "https://maven.covers1624.net/"
    }
    maven {
        url = "https://jitpack.io/"
    }
    maven {
        url = "https://cursemaven.com/"
		content {
            includeGroup "curse.maven"
        }
    }
    maven {
        url = "https://modmaven.dev/"
    }
}

sourceSets {
    main
}

version = "3.1.0.3"
group = "thelm.packagedexcrafting"
archivesBaseName = "PackagedExCrafting-1.18.2"

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

minecraft {
    mappings channel: "parchment", version: "2022.09.04-1.18.2"
    runs {
        client = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run").canonicalPath
            source sourceSets.main
        }
        server = {
            properties "forge.logging.markers": "SCAN,REGISTRIES,REGISTRYDUMP"
            properties "forge.logging.console.level": "debug"
            properties "mixin.env.remapRefMap": "true"
            properties "mixin.env.refMapRemappingFile": "${projectDir}/build/createSrgToMcp/output.srg".toString()
            workingDirectory project.file("run").canonicalPath
            source sourceSets.main
        }
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.18.2-40.1.85"

    implementation fg.deobf("appeng:appliedenergistics2-forge:11.6.4")
    implementation fg.deobf("mezz.jei:jei-1.18.2:9.7.2.281")
    implementation fg.deobf("com.blamejared.crafttweaker:CraftTweaker-forge-1.18.2:9.1.197")
    implementation fg.deobf("vazkii.patchouli:Patchouli:1.18.2-71.1")
    implementation fg.deobf("com.jozufozu.flywheel:flywheel-forge-1.18.2:0.6.5-91")
    implementation fg.deobf("com.simibubi.create:create-1.18.2:0.5.0.e-196:all")
    implementation fg.deobf("mekanism:Mekanism:1.18.2-10.2.5.465")
    implementation fg.deobf("mekanism:Mekanism:1.18.2-10.2.5.465:generators")
    implementation fg.deobf("codechicken:CodeChickenLib:1.18.2-4.1.2.479:universal")

    //JitPack

    //CurseMaven
    implementation fg.deobf("curse.maven:shutup-experimental-settings-407174:3759881")
    implementation fg.deobf("curse.maven:packagedauto-308380:4104298")
    implementation fg.deobf("curse.maven:applied-mekanistics-574300:3968835")
    implementation fg.deobf("curse.maven:cucumber-272335:4005476")
    implementation fg.deobf("curse.maven:extended-crafting-268387:3885707")
    implementation fg.deobf("curse.maven:avaritia-1-10-261348:4074018")
    implementation fg.deobf("curse.maven:ato-405593:3975599")
}

jar {
    manifest {
        attributes([
                "Specification-Title": "PackagedExCrafting",
                "Specification-Vendor": "thelm",
                "Specification-Version": "3",
                "Implementation-Title": "${archivesBaseName}",
                "Implementation-Version": "${version}",
                "Implementation-Vendor": "thelm"
                //"Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
        ],)
    }
}
